update setting icon

--- a/app/src/main/res/layout/business_button_setting.xml
+++ b/app/src/main/res/layout/business_button_setting.xml
@@ -143,7 +143,8 @@
                     android:layout_marginTop="40dp"
                     android:background="@drawable/business_shape_button"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/business_ic_order"
+                    android:padding="10dp"
+                    android:src="@drawable/business_ic_order_type"
                     app:layout_constraintBottom_toTopOf="@+id/textView15"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.529"
@@ -169,14 +170,13 @@
                 android:layout_weight="1">
 
                 <ImageButton
-                    android:id="@+id/btn_SanPham"
+                    android:id="@+id/btn_thanhtoan"
                     android:layout_width="69dp"
                     android:layout_height="69dp"
                     android:layout_marginTop="40dp"
                     android:background="@drawable/business_shape_button"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/business_ic_product"
-                    android:paddingLeft="5dp"
+                    android:src="@drawable/business_ic_payment_type"
                     app:layout_constraintBottom_toTopOf="@+id/tv_SP"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.529"
@@ -189,7 +189,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
-                    android:text="Sản phẩm"
+                    android:text="Thanh toán"
                     android:textColor="@color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -202,13 +202,13 @@
                 android:layout_weight="1">
 
                 <ImageButton
-                    android:id="@+id/btn_nhacungcap"
+                    android:id="@+id/btn_hoptac"
                     android:layout_width="69dp"
                     android:layout_height="69dp"
                     android:layout_marginTop="40dp"
                     android:background="@drawable/business_shape_button"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/business_ic_supplier"
+                    android:src="@drawable/business_ic_supplier_type"
                     app:layout_constraintBottom_toTopOf="@+id/tv_nhacungcap"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.529"
@@ -221,7 +221,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
-                    android:text="Nhà cung cấp"
+                    android:text="Hợp tác"
                     android:textColor="@color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -234,15 +234,13 @@
                 android:layout_weight="1">
 
                 <ImageButton
-                    android:id="@+id/btn_khohang"
+                    android:id="@+id/btn_phanloai"
                     android:layout_width="69dp"
                     android:layout_height="69dp"
                     android:layout_marginTop="40dp"
                     android:background="@drawable/business_shape_button"
-                    android:paddingStart="10dp"
-                    android:paddingEnd="5dp"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/business_ic_storage"
+                    android:src="@drawable/business_ic_product_type"
                     app:flow_horizontalAlign="center"
                     app:layout_constraintBottom_toTopOf="@+id/tv_kho"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -256,7 +254,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
-                    android:text="Kho hàng"
+                    android:text="Phân loại"
                     android:textColor="@color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -286,8 +284,8 @@
                     android:layout_height="69dp"
                     android:background="@drawable/business_shape_button"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/business_ic_report"
-                    android:padding="5dp"
+                    android:src="@drawable/business_ic_product_status"
+                    android:padding="10dp"
                     app:layout_constraintBottom_toTopOf="@+id/tv_baocao"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.529"
@@ -300,7 +298,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="40dp"
-                    android:text="Báo cáo"
+                    android:text="Tình trạng"
                     android:textColor="@color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -318,7 +316,7 @@
                     android:background="@drawable/business_shape_button"
                     android:paddingTop="5dp"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/business_ic_employee"
+                    android:src="@drawable/business_ic_division"
                     android:text="Nhan vien"
                     android:textColor="@color/black"
                     app:layout_constraintBottom_toTopOf="@+id/tv_nhanvien"
@@ -332,7 +330,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="40dp"
-                    android:text="Nhân viên"
+                    android:text="Bộ phận"
                     android:textColor="@color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -350,7 +348,7 @@
                 android:background="@drawable/business_shape_button"
                 android:padding="10dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_notifications_black_24dp"
+                android:src="@drawable/business_icon_level_staff"
                 android:text="Thong bao"
                 app:layout_constraintBottom_toTopOf="@+id/tv_thongbao"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -363,7 +361,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="40dp"
-                android:text="Thông báo"
+                android:text="Cấp nhân viên"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -379,11 +377,10 @@
                 android:layout_width="69dp"
                 android:layout_height="69dp"
                 android:background="@drawable/business_shape_button"
-                android:padding="10dp"
                 android:scaleType="fitCenter"
                 app:flow_horizontalAlign="center"
-                android:src="@drawable/business_ic_setting"
-                android:text="Cai dat"
+                android:src="@drawable/business_ic_work_type"
+                android:text="Làm việc"
                 app:layout_constraintBottom_toTopOf="@+id/tv_caidat"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.47"
@@ -396,7 +393,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="40dp"
-                android:text="Cài đặt"
+                android:text="Làm việc"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
