--- a/app/src/main/res/layout/fragment_choose.xml
+++ b/app/src/main/res/layout/fragment_choose.xml
@@ -5,24 +5,6 @@
     android:background="@drawable/background_gradient"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <Button
-        android:id="@+id/individual"
-        android:layout_width="100dp"
-        android:layout_height="70dp"
-        android:layout_marginEnd="68dp"
-        android:text="Cá nhân"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btn_dn" />
-
-    <Button
-        android:id="@+id/btn_dn"
-        android:layout_width="100dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="156dp"
-        android:text="Doanh nghiệp "
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
         android:id="@+id/textView6"
@@ -64,61 +46,84 @@
 
 
     <View
+        android:id="@+id/imageDN"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="56dp"
+        android:background="@drawable/rounded_corners_for_business"
+        app:layout_constraintBottom_toTopOf="@+id/btn_dn"
+        app:layout_constraintEnd_toEndOf="@+id/btn_dn"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/btn_dn"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:layout_constraintVertical_bias="0.937" />
+
+    <Button
+        android:id="@+id/btn_dn"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="124dp"
+        android:text="Doanh nghiệp "
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+    <View
         android:id="@+id/imageCN"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginBottom="4dp"
         android:background="@drawable/rounded_corners"
+        app:layout_constraintBottom_toBottomOf="@id/individual"
         app:layout_constraintBottom_toTopOf="@+id/individual"
         app:layout_constraintEnd_toEndOf="@+id/individual"
-        app:layout_constraintStart_toStartOf="@+id/individual"
-        app:layout_constraintBottom_toBottomOf="@id/individual" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/individual" />
 
     <ImageView
         android:id="@+id/ic_user"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:src="@drawable/ic_user"
-        app:layout_constraintTop_toTopOf="@id/imageCN"
         app:layout_constraintBottom_toBottomOf="@id/imageCN"
-        app:layout_constraintStart_toStartOf="@id/imageCN"
         app:layout_constraintEnd_toEndOf="@id/imageCN"
-        />
+        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintStart_toStartOf="@id/imageCN"
+        app:layout_constraintTop_toTopOf="@id/imageCN"
+        app:layout_constraintVertical_bias="0.566" />
 
-
-    <View
-        android:id="@+id/imageDN"
+    <Button
+        android:id="@+id/individual"
         android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/rounded_corners_for_business"
-        app:layout_constraintBottom_toTopOf="@+id/btn_dn"
-        app:layout_constraintEnd_toEndOf="@+id/btn_dn"
-        app:layout_constraintStart_toStartOf="@+id/btn_dn"
-        app:layout_constraintBottom_toBottomOf="@id/btn_dn"/>
+        android:layout_height="70dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="60dp"
+        android:text="Cá nhân"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btn_dn" />
 
     <ImageView
         android:id="@+id/ic_business"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:src="@drawable/ic_business"
-        app:layout_constraintTop_toTopOf="@id/imageDN"
         app:layout_constraintBottom_toBottomOf="@id/imageDN"
-        app:layout_constraintStart_toStartOf="@id/imageDN"
         app:layout_constraintEnd_toEndOf="@id/imageDN"
-        />
-
-
+        app:layout_constraintHorizontal_bias="0.433"
+        app:layout_constraintStart_toStartOf="@id/imageDN"
+        app:layout_constraintTop_toTopOf="@id/imageDN" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="0dp"
         android:layout_height="202dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="50dp"
+        android:gravity="center_horizontal|center_vertical"
         android:text="@string/sub_heading_page_choose"
         android:textAppearance="@style/lorem_ipsum"
         android:textSize="16dp"
-        android:gravity="center_horizontal|center_vertical"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
