--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -87,6 +87,7 @@
         android:textAlignment="center"
         android:textSize="25dp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         android:gravity="center_vertical|center_horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -100,6 +101,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Tên người dùng"
+        android:textColor="@color/black"
         android:drawableStart="@drawable/ic_use_register"
         android:drawablePadding="8dp"
         android:padding="12dp"
@@ -117,6 +119,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Nhập email của bạn"
+        android:textColor="@color/black"
         android:drawableStart="@drawable/ic_email"
         android:drawablePadding="8dp"
         android:padding="12dp"
@@ -134,6 +137,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Nhập mật khẩu"
+        android:textColor="@color/black"
         android:inputType="textPassword"
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="8dp"
@@ -152,6 +156,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Xác nhận mật khẩu"
+        android:textColor="@color/black"
         android:inputType="textPassword"
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="8dp"
@@ -225,6 +230,7 @@
         android:layout_height="wrap_content"
         android:text="Bằng cách đồng ý với các điều khoản và điều kiện, bạn đang ký kết hợp đồng ràng buộc về mặt pháp lý với nhà cung cấp dịch vụ."
         android:textSize="12sp"
+        android:textColor="@color/black"
         android:layout_marginTop="14dp"
         app:layout_constraintTop_toBottomOf="@id/RegisterContent"
         app:layout_constraintStart_toStartOf="parent"
