--- a/app/src/main/res/layout/item_salary.xml
+++ b/app/src/main/res/layout/item_salary.xml
@@ -28,8 +28,8 @@
         android:id="@+id/income_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Text"
-        android:textColor="@android:color/white"
+        android:text="Thu nhập: 1,000,000.000 đ"
+        android:textColor="@color/yellow"
         android:textSize="16sp"
         android:textStyle="bold"
         android:layout_gravity="end"
