--- a/app/src/main/res/layout/business_fragment_more.xml
+++ b/app/src/main/res/layout/business_fragment_more.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/background_gradient"    android:layout_height="match_parent"
+    android:background="@drawable/background_gradient"
+    android:layout_height="match_parent"
     tools:context=".ui.notifications.NotificationsFragment">
 
     <Button
@@ -19,11 +20,11 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvName"
         android:layout_width="166dp"
         android:layout_height="45dp"
         android:gravity="center_vertical"
-        android:text="Le Ngoc Duy Linh"
+        android:text=""
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,8 +37,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ID:22520762"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintStart_toStartOf="@+id/tvName"
+        app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -65,6 +66,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:text="Logout"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="@+id/textView3" />
+        app:layout_constraintStart_toEndOf="@+id/tvName"
+        app:layout_constraintTop_toTopOf="@+id/tvName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
