--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,8 +28,8 @@
         android:layout_marginStart="56dp"
         android:layout_marginTop="12dp"
         android:gravity="center"
-        android:text="Thanh Lộc"
-        android:textSize="20dp"
+        android:text="--------"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView" />
 
