--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -19,7 +19,7 @@
         android:layout_marginTop="20dp"
         android:textStyle="bold"
         android:textAlignment="center"
-        android:text="Welcome!"
+        android:text="@string/welcome"
         android:textColor="#00BCD4"
         android:textSize="30sp" />
 
