--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@drawable/background_gradient"
     android:layout_height="match_parent">
@@ -14,7 +13,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/rounded_edittext"
-        android:hint="   Nhập email tên người dùng"
+        android:hint="@string/nhap_email_ten_nguoi_dung"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -26,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="208dp"
-        android:text="Tài khoản"
+        android:text="@string/tai_khoan"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/emaileditText"
@@ -40,7 +39,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/rounded_corners_login"
-        android:text="Đăng nhập"
+        android:text="@string/Dang_nhap"
         android:textColor="#ffffff"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -78,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="28dp"
-            android:text="Đăng nhập qua Google"
+            android:text="@string/Dang_nhap_qua_google"
             android:textColor="#FF0000"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -94,7 +93,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/rounded_edittext"
-        android:hint="   Nhập mật khẩu"
+        android:hint="@string/nhap_mat_khau"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -122,7 +121,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Hay"
+        android:text="@string/hay"
         android:textColor="#BDBDBD"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -162,7 +161,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:text="Đăng nhập qua Facebook"
+            android:text="@string/Dang_nhap_qua_facebook"
             android:textColor="#2C5CCD"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -191,7 +190,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/rounded_corners_register"
-        android:text="Tạo tài khoản"
+        android:text="@string/tao_tai_khoan"
         android:textColor="@android:color/black"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -205,7 +204,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="Mật khẩu"
+        android:text="@string/mat_khau"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/editText2"
@@ -218,7 +217,7 @@
         android:layout_width="312dp"
         android:layout_height="79dp"
         android:layout_marginTop="12dp"
-        android:text="Quản lý tài chính chưa bao giờ là dễ đến thế"
+        android:text="@string/cau_gioi_thieu"
         android:textAlignment="center"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -226,20 +225,6 @@
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gr_name" />
-
-
-    <!-- Tao tai khoan -->
-
-    <!-- Divider -->
-
-    <!-- View (Đường kẻ trái) -->
-
-    <!-- View (Đường kẻ phải) -->
-
-
-    <!-- Dang nhap qua google -->
-
-    <!-- Dang nhap qua facebook -->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/gr_name"
@@ -269,12 +254,11 @@
 
         <TextView
             android:id="@+id/name"
-
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:text="FineCoin"
+            android:text="@string/finecoin"
             android:textAlignment="center"
-            android:textSize="32dp"
+            android:textSize="32sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
