--- a/app/src/main/res/layout/business_activity_info.xml
+++ b/app/src/main/res/layout/business_activity_info.xml
@@ -131,5 +131,11 @@
             android:textColor="@color/white"
             android:layout_gravity="center_horizontal" />
 
+        <Button
+            android:id="@+id/existing_company_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Đã có công ty" />
     </LinearLayout>
+
 </ScrollView>
