--- a/app/src/main/res/layout/business_supplier_edit_item.xml
+++ b/app/src/main/res/layout/business_supplier_edit_item.xml
@@ -107,12 +107,13 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/et_supplier_edit_ghichu"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="invisible"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Thêm sản phẩm"
+        android:text="Thêm"
         android:textSize="10dp"
         app:layout_constraintStart_toEndOf="@id/tv_supplier_edit_listsp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -125,7 +126,8 @@
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/tv_supplier_edit_listsp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="invisible"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
