--- a/app/src/main/res/layout/business_supplier_edit_item.xml
+++ b/app/src/main/res/layout/business_supplier_edit_item.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/tv_supplier_edit_header"
         android:text="Thêm nhà cung cấp"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:textStyle="bold"
         android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
@@ -74,7 +74,7 @@
     <EditText
         android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:id="@+id/sp_supplier_edit_email"
+        android:id="@+id/et_supplier_edit_email"
         android:hint="Email"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
@@ -108,7 +108,7 @@
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/et_supplier_edit_ghichu"
         app:layout_constraintStart_toStartOf="parent"
-        android:visibility="invisible"/>
+       />
 
     <Button
         android:layout_width="wrap_content"
@@ -126,8 +126,8 @@
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/tv_supplier_edit_listsp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="invisible"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
