--- a/app/src/main/res/layout/business_storage_edit_item.xml
+++ b/app/src/main/res/layout/business_storage_edit_item.xml
@@ -69,6 +69,7 @@
         android:layout_height="wrap_content"
         android:text="Thêm sản phẩm"
         android:textSize="10dp"
+        android:visibility="invisible"
         app:layout_constraintStart_toEndOf="@id/tv_storage_edit_listsp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_storage_edit_listsp"
