--- a/app/src/main/res/layout/business_report_fragment_sale.xml
+++ b/app/src/main/res/layout/business_report_fragment_sale.xml
@@ -23,11 +23,11 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
-
             <Spinner
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"></Spinner>
+                android:layout_marginTop="15dp">
+            </Spinner>
         </LinearLayout>
 
         <LinearLayout
