--- a/app/src/main/res/layout/item_storage_edit_product.xml
+++ b/app/src/main/res/layout/item_storage_edit_product.xml
@@ -12,7 +12,8 @@
         android:text="Mã SP"
         android:textSize="16sp" />
 
-    <ImageView
+    <ImageButton
+        android:id="@+id/decrease"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/baseline_horizontal_rule_24"
@@ -22,7 +23,8 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:inputType="numberDecimal" />
-    <ImageView
+    <ImageButton
+        android:id="@+id/increase"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/baseline_add_24"
