--- a/app/src/main/res/layout/business_report_fragment_finance.xml
+++ b/app/src/main/res/layout/business_report_fragment_finance.xml
@@ -23,7 +23,8 @@
             <Spinner
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"></Spinner>
+                android:layout_marginTop="15dp">
+            </Spinner>
         </LinearLayout>
 
         <LinearLayout
