--- a/app/src/main/res/layout/business_employee_edit_item.xml
+++ b/app/src/main/res/layout/business_employee_edit_item.xml
@@ -105,8 +105,6 @@
         app:layout_constraintBottom_toBottomOf="@id/et_employee_edit_sdt"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-
-
     <EditText
         android:layout_width="170dp"
         android:layout_height="wrap_content"
@@ -115,6 +113,18 @@
         app:layout_constraintStart_toEndOf="@id/et_employee_edit_manv"
         app:layout_constraintTop_toTopOf="@+id/et_employee_edit_manv"
         app:layout_constraintBottom_toBottomOf="@id/et_employee_edit_manv"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <ImageButton
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:id="@+id/ib_employee_date"
+        android:src="@drawable/business_ic_date"
+        android:layout_marginEnd="5dp"
+        android:background="#00FFFFFF"
+        android:scaleType="centerCrop"
+        app:layout_constraintTop_toTopOf="@id/et_employee_edit_ngay"
+        app:layout_constraintBottom_toBottomOf="@id/et_employee_edit_ngay"
         app:layout_constraintEnd_toEndOf="parent"/>
 
 
