--- a/app/src/main/res/layout/business_order_edit_item.xml
+++ b/app/src/main/res/layout/business_order_edit_item.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <EditText
-        android:layout_width="170dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:id="@+id/et_order_edit_madonhang"
         android:hint="Mã đơn hàng"
@@ -71,13 +71,25 @@
 
 
     <EditText
-        android:layout_width="170dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:id="@+id/et_order_edit_ngay"
         android:hint="DD/MM/YYYY"
         app:layout_constraintStart_toEndOf="@id/et_order_edit_madonhang"
         app:layout_constraintTop_toTopOf="@+id/et_order_edit_madonhang"
         app:layout_constraintBottom_toBottomOf="@id/et_order_edit_madonhang"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <ImageButton
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:id="@+id/ib_order_date"
+        android:src="@drawable/business_ic_date"
+        android:layout_marginEnd="5dp"
+        android:background="#00FFFFFF"
+        android:scaleType="centerCrop"
+        app:layout_constraintTop_toTopOf="@id/et_order_edit_ngay"
+        app:layout_constraintBottom_toBottomOf="@id/et_order_edit_ngay"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
