--- a/app/src/main/res/layout/business_supplier_edit_item.xml
+++ b/app/src/main/res/layout/business_supplier_edit_item.xml
@@ -97,6 +97,18 @@
         app:layout_constraintBottom_toBottomOf="@id/et_supplier_edit_manhacc"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <ImageButton
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:id="@+id/ib_supplier_date"
+        android:src="@drawable/business_ic_date"
+        android:layout_marginEnd="5dp"
+        android:background="#00FFFFFF"
+        android:scaleType="centerCrop"
+        app:layout_constraintTop_toTopOf="@id/et_supplier_edit_ngay"
+        app:layout_constraintBottom_toBottomOf="@id/et_supplier_edit_ngay"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
