--- a/app/src/main/res/layout/business_product_edit_item.xml
+++ b/app/src/main/res/layout/business_product_edit_item.xml
@@ -44,43 +44,28 @@
         app:layout_constraintStart_toEndOf="@id/et_product_edit_giavon"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <EditText
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/sp_product_edit_phanloai"
-        android:hint="Phân loai"
-        app:layout_constraintTop_toBottomOf="@id/et_product_edit_giavon"
-        app:layout_constraintStart_toStartOf="@id/et_product_edit_masp"/>
+
 
     <EditText
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:id="@+id/et_product_edit_ghichu"
         android:hint="Ghi chú"
-        app:layout_constraintTop_toBottomOf="@id/sp_product_edit_phanloai"
+        app:layout_constraintTop_toBottomOf="@id/et_product_edit_giavon"
         app:layout_constraintStart_toStartOf="@id/et_product_edit_masp"/>
+
 
     <Spinner
         android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:id="@+id/sp_product_edit_tinhtrang"
+        android:id="@+id/sp_product_edit_phanloai"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         app:layout_constraintStart_toEndOf="@id/et_product_edit_ghichu"
         app:layout_constraintTop_toTopOf="@+id/et_product_edit_ghichu"
         app:layout_constraintBottom_toBottomOf="@id/et_product_edit_ghichu"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <Spinner
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/sp_product_edit_nhacungcap"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        app:layout_constraintStart_toEndOf="@id/sp_product_edit_phanloai"
-        app:layout_constraintTop_toTopOf="@+id/sp_product_edit_phanloai"
-        app:layout_constraintBottom_toBottomOf="@id/sp_product_edit_phanloai"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
 
 
